<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.release.rroycsdev.findmycar.OcrCaptureMainActivity">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ocr_header"
        android:id="@+id/status_message"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_marginTop="24dp"
        android:layout_below="@id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ocr_header2"
        android:id="@+id/status_message2"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_value"
        android:layout_below="@+id/status_message2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_alignEnd="@+id/status_message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_text"
        android:id="@+id/read_text"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@id/auto_focus" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_text2"
        android:id="@+id/read_text2"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/use_flash"
         />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:layout_below="@+id/text_value"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <android.support.design.widget.TextInputLayout
        android:visibility="invisible"
        android:id="@+id/textInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@id/auto_focus"
        android:layout_below="@id/auto_focus">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:visibility="invisible"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textStyle="bold"
        android:textSize="17sp"
        android:id="@+id/save_button"
        android:backgroundTint="@color/bottomBarColor"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/use_flash"
        android:layout_alignStart="@id/use_flash"
        android:layout_toEndOf="@id/textInput"
        android:enabled="true"
        android:text="@string/save" />

</RelativeLayout>